# ChangeLog for sys-apps/qingy
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/qingy/ChangeLog,v 1.15 2004/08/16 23:59:43 s4t4n Exp $

*qingy-0.5.0 (17 August 2004)

  17 August 2004; Michele Noberasco <s4t4n@gentoo.org> qingy-0.5.0.ebuild:
  Version bump. Closes #60402. I'm directly marking this stable for x86
  as it specifically addresses issues with 2.6.8 kernels...

  15 August 2004; Michele Noberasco <s4t4n@gentoo.org> qingy-0.4.1.ebuild:
  Add big fat warning against using qingy with kernels > 2.6.5...

  14 Aug 2004; Sven Wegener <swegener@gentoo.org> metadata.xml:
  Corrected metadata.xml to match DTD.

  31 July 2004; Michele Noberasco <s4t4n@gentoo.org> qingy-0.4.1.ebuild:
  Stable for x86.

*qingy-0.4.1 (28 July 2004)

  28 July 2004; Michele Noberasco <s4t4n@gentoo.org> qingy-0.4.1.ebuild:
  Version bump. This is going to be the next unmasked version ;-)

  19 Jul 2004; <malc@gentoo.org> qingy-0.4.0.ebuild:
  Add ~amd64 keyword, fixes bug #55461

*qingy-0.4.0 (20 Mar 2004)

  20 Mar 2004; Markus Nigbur <pyrania@gentoo.org> qingy-0.4.0.ebuild:
  Version bump. Closing #45072.

*qingy-0.3.0 (25 Feb 2004)

  25 Feb 2004; Markus Nigbur <pyrania@gentoo.org> qingy-0.3.0.ebuild:
  Version bump.

  06 Dec 2003; Markus Nigbur <pyrania@gentoo.org> qingy-0.2.3.ebuild:
  Added DEPEND to pkgconfig

  25 Oct 2003; Markus Nigbur <pyrania@gentoo.org> qingy-0.2.1.ebuild,
  qingy-0.2.2.ebuild, qingy-0.2.3.ebuild:
  Added ~ppc keyword.

*qingy-0.2.3 (21 Oct 2003)

  21 Oct 2003; Markus Nigbur <pyrania@gentoo.org> qingy-0.2.3.ebuild:
  Version bump. Thanks to Noberasco Michele (#31667).

*qingy-0.2.2 (17 Oct 2003)

  17 Oct 2003; Jon Portnoy <avenj@gentoo.org> qingy-0.2.2.ebuild :
  Version bump + moved to sys-apps, bugs 29903 and 29594.

*qingy-0.2.1 (06 Sep 2003)

  06 Sep 2003; Jon Portnoy <avenj@gentoo.org> qingy-0.2.1.ebuild :