@@ -1,16 +1,4 @@
-MD5 23adc5718639d06a3b7112653fcefcc3 qingy-0.4.1.ebuild 2087
-MD5 15220afae13bf7204a58dc66d2585bad qingy-0.2.2.ebuild 1056
-MD5 ad3c5bc952e2e73a5a743fef2bc858c1 qingy-0.3.0.ebuild 1296
-MD5 440526305a15f00147a1f9790bd54bf8 qingy-0.4.0.ebuild 1926
-MD5 4e93288abbe186fcd024d7fa3f5ce32c qingy-0.2.1.ebuild 1055
-MD5 5105c870a917d5bc28786d17ce64925a qingy-0.5.0.ebuild 2116
-MD5 506bd9f0af3afe8b8dcbee66ac6c58b2 qingy-0.2.3.ebuild 1085
-MD5 1f3c41cdc932d5efba71416e166b1576 ChangeLog 2018
+MD5 ce18b06d46fd9e7d586696f8934b2b9c qingy-0.5.1.ebuild 2116
+MD5 616bfd566c005f5586cbc6e165a42aaa ChangeLog 2514
 MD5 40051d4be23df0dc23c2dadbaa168415 metadata.xml 258
-MD5 d2c2a387643e5c0930982bbc58adb529 files/digest-qingy-0.2.1 64
-MD5 eea835254d6473eb82299eca77e9f219 files/digest-qingy-0.2.2 64
-MD5 c3008d48a523b5f16a29469f4f29de27 files/digest-qingy-0.2.3 64
-MD5 91a37fa2bb3a93238c23672eff9c4dca files/digest-qingy-0.3.0 64
-MD5 734ceb39541dd6aee2025617d8548ed8 files/digest-qingy-0.4.0 64
-MD5 c42c04ea6e6e96b61fa74694d17e0c23 files/digest-qingy-0.4.1 64
-MD5 314ada0b727e30179ef8bf98efb6662a files/digest-qingy-0.5.0 64
+MD5 aa97eda419e207488cd44375b41eb753 files/digest-qingy-0.5.1 64
