@@ -1,1 +1,0 @@
-MD5 4427d142d9d4ad83f1a2372a6818b8df qingy-0.2.1.tar.bz2 591823
