@@ -1,1 +1,0 @@
-MD5 4aa684af4f63b517e849d6dc2d126bbb qingy-0.2.2.tar.bz2 556737
