@@ -1,1 +1,0 @@
-MD5 aff76c982645ea7afc948fedb475fc00 qingy-0.2.3.tar.bz2 563812
