@@ -1,1 +1,0 @@
-MD5 c5dd9fcabc02a4d580aa7e991c43d9f8 qingy-0.3.0.tar.bz2 707935
