@@ -1,1 +1,0 @@
-MD5 31f708e4e824c5fc17d5a42eb09357f5 qingy-0.4.0.tar.bz2 474606
