@@ -1,1 +1,0 @@
-MD5 3ed80b873d0f90e73f825fd5c5ccd12b qingy-0.4.1.tar.bz2 482008
