@@ -1,1 +1,0 @@
-MD5 be629aa9f12372cd9961fb66209b3e9a qingy-0.5.0.tar.bz2 482787
