@@ -1,0 +1,1 @@
+MD5 1a9d112cde5b01e92a680168e553396e qingy-0.5.1.tar.bz2 482806
